Put in every correct album cover

--- a/beatles/discography.html
+++ b/beatles/discography.html
@@ -44,7 +44,7 @@
         
     </header>
     <section>
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <h2 class="subheading">Studio Albums</h2>
             </div>
@@ -62,72 +62,30 @@
                 <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center album">
                         <a href="https://en.wikipedia.org/wiki/Please_Please_Me" target="_blank">
                             <div>
-                                <img src="assets/img/PleasePleaseMe1.jpg" alt="Please Please Me" class="album-image img-fluid">
+                                <img src="assets/img/WithTheBeatles.jpg" alt="With The Beatles" class="album-image img-fluid">
                             </div>
                             <div>
-                                <h4>Please Please Me</h4>
-                            </div>
-                        </a>
-                </div>
-                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center album">
-                        <a href="https://en.wikipedia.org/wiki/Please_Please_Me" target="_blank">
-                            <div>
-                                <img src="assets/img/PleasePleaseMe1.jpg" alt="Please Please Me" class="album-image img-fluid">
-                            </div>
-                            <div>
-                                <h4>Please Please Me</h4>
+                                <h4>With The Beatles</h4>
                             </div>
                         </a>
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center album">
                         <a href="https://en.wikipedia.org/wiki/Please_Please_Me" target="_blank">
                             <div>
-                                <img src="assets/img/PleasePleaseMe1.jpg" alt="Please Please Me" class="album-image img-fluid">
+                                <img src="assets/img/AHDN.jpg" alt="A Hard Day's Night" class="album-image img-fluid">
                             </div>
                             <div>
-                                <h4>Please Please Me</h4>
-                            </div>
-                        </a>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center album">
-                        <a href="https://en.wikipedia.org/wiki/Please_Please_Me" target="_blank">
-                            <div>
-                                <img src="assets/img/PleasePleaseMe1.jpg" alt="Please Please Me" class="album-image img-fluid">
-                            </div>
-                            <div>
-                                <h4>Please Please Me</h4>
+                                <h4>A Hard Day's Night</h4>
                             </div>
                         </a>
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center album">
                         <a href="https://en.wikipedia.org/wiki/Please_Please_Me" target="_blank">
                             <div>
-                                <img src="assets/img/PleasePleaseMe1.jpg" alt="Please Please Me" class="album-image img-fluid">
+                                <img src="assets/img/BFS.jpg" alt="Beatles For Sale" class="album-image img-fluid">
                             </div>
                             <div>
-                                <h4>Please Please Me</h4>
-                            </div>
-                        </a>
-                </div>
-                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center album">
-                        <a href="https://en.wikipedia.org/wiki/Please_Please_Me" target="_blank">
-                            <div>
-                                <img src="assets/img/PleasePleaseMe1.jpg" alt="Please Please Me" class="album-image img-fluid">
-                            </div>
-                            <div>
-                                <h4>Please Please Me</h4>
-                            </div>
-                        </a>
-                </div>
-                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center album">
-                        <a href="https://en.wikipedia.org/wiki/Please_Please_Me" target="_blank">
-                            <div>
-                                <img src="assets/img/PleasePleaseMe1.jpg" alt="Please Please Me" class="album-image img-fluid">
-                            </div>
-                            <div>
-                                <h4>Please Please Me</h4>
+                                <h4>Beatles For Sale</h4>
                             </div>
                         </a>
                 </div>
@@ -136,40 +94,82 @@
                 <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center album">
                         <a href="https://en.wikipedia.org/wiki/Please_Please_Me" target="_blank">
                             <div>
-                                <img src="assets/img/PleasePleaseMe1.jpg" alt="Please Please Me" class="album-image img-fluid">
+                                <img src="assets/img/Help.jpg" alt="Help!" class="album-image img-fluid">
                             </div>
                             <div>
-                                <h4>Please Please Me</h4>
-                            </div>
-                        </a>
-                </div>
-                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center album">
-                        <a href="https://en.wikipedia.org/wiki/Please_Please_Me" target="_blank">
-                            <div>
-                                <img src="assets/img/PleasePleaseMe1.jpg" alt="Please Please Me" class="album-image img-fluid">
-                            </div>
-                            <div>
-                                <h4>Please Please Me</h4>
+                                <h4>Help!</h4>
                             </div>
                         </a>
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center album">
                         <a href="https://en.wikipedia.org/wiki/Please_Please_Me" target="_blank">
                             <div>
-                                <img src="assets/img/PleasePleaseMe1.jpg" alt="Please Please Me" class="album-image img-fluid">
+                                <img src="assets/img/RubberSoul.jpg" alt="Rubber Soul" class="album-image img-fluid">
                             </div>
                             <div>
-                                <h4>Please Please Me</h4>
+                                <h4>Rubber Soul</h4>
                             </div>
                         </a>
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center album">
                         <a href="https://en.wikipedia.org/wiki/Please_Please_Me" target="_blank">
                             <div>
-                                <img src="assets/img/PleasePleaseMe1.jpg" alt="Please Please Me" class="album-image img-fluid">
+                                <img src="assets/img/Revolver.jpg" alt="Revolver" class="album-image img-fluid">
                             </div>
                             <div>
-                                <h4>Please Please Me</h4>
+                                <h4>Revolver</h4>
+                            </div>
+                        </a>
+                </div>
+                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center album">
+                        <a href="https://en.wikipedia.org/wiki/Please_Please_Me" target="_blank">
+                            <div>
+                                <img src="assets/img/SP.jpg" alt="Sgt Pepper’s Lonely Hearts Club Band" class="album-image img-fluid">
+                            </div>
+                            <div>
+                                <h5>Sgt Pepper’s Lonely Hearts Club Band</h5>
+                            </div>
+                        </a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center album">
+                            <a href="https://en.wikipedia.org/wiki/Please_Please_Me" target="_blank">
+                                <div>
+                                    <img src="assets/img/TBWA.png" alt="The Beatles" class="album-image img-fluid">
+                                </div>
+                                <div>
+                                    <h4>The Beatles</h4>
+                                </div>
+                            </a>
+                </div>
+                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center album">
+                        <a href="https://en.wikipedia.org/wiki/Please_Please_Me" target="_blank">
+                            <div>
+                                <img src="assets/img/YS.jpg" alt="Yellow Submarine" class="album-image img-fluid">
+                            </div>
+                            <div>
+                                <h4>Yellow Submarine</h4>
+                            </div>
+                        </a>
+                </div>
+                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center album">
+                        <a href="https://en.wikipedia.org/wiki/Please_Please_Me" target="_blank">
+                            <div>
+                                <img src="assets/img/AbbeyRoad.jpg" alt="Abbey Road" class="album-image img-fluid">
+                            </div>
+                            <div>
+                                <h4>Abbey Road</h4>
+                            </div>
+                        </a>
+                </div>
+                <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center album">
+                        <a href="https://en.wikipedia.org/wiki/Please_Please_Me" target="_blank">
+                            <div>
+                                <img src="assets/img/LetItBe.jpg" alt="Let It Be" class="album-image img-fluid">
+                            </div>
+                            <div>
+                                <h4>Let it Be</h4>
                             </div>
                         </a>
                 </div>
