Insert correct links for Album Covers

--- a/beatles/discography.html
+++ b/beatles/discography.html
@@ -60,7 +60,7 @@
                         </a>
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center album">
-                        <a href="https://en.wikipedia.org/wiki/Please_Please_Me" target="_blank">
+                        <a href="https://en.wikipedia.org/wiki/With_the_Beatles" target="_blank">
                             <div>
                                 <img src="assets/img/WithTheBeatles.jpg" alt="With The Beatles" class="album-image img-fluid">
                             </div>
@@ -70,7 +70,7 @@
                         </a>
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center album">
-                        <a href="https://en.wikipedia.org/wiki/Please_Please_Me" target="_blank">
+                        <a href="https://en.wikipedia.org/wiki/A_Hard_Day%27s_Night_(album)" target="_blank">
                             <div>
                                 <img src="assets/img/AHDN.jpg" alt="A Hard Day's Night" class="album-image img-fluid">
                             </div>
@@ -80,7 +80,7 @@
                         </a>
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center album">
-                        <a href="https://en.wikipedia.org/wiki/Please_Please_Me" target="_blank">
+                        <a href="https://en.wikipedia.org/wiki/Beatles_for_Sale" target="_blank">
                             <div>
                                 <img src="assets/img/BFS.jpg" alt="Beatles For Sale" class="album-image img-fluid">
                             </div>
@@ -92,7 +92,7 @@
             </div>
             <div class="row">
                 <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center album">
-                        <a href="https://en.wikipedia.org/wiki/Please_Please_Me" target="_blank">
+                        <a href="https://en.wikipedia.org/wiki/Help!" target="_blank">
                             <div>
                                 <img src="assets/img/Help.jpg" alt="Help!" class="album-image img-fluid">
                             </div>
@@ -102,7 +102,7 @@
                         </a>
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center album">
-                        <a href="https://en.wikipedia.org/wiki/Please_Please_Me" target="_blank">
+                        <a href="https://en.wikipedia.org/wiki/Rubber_Soul" target="_blank">
                             <div>
                                 <img src="assets/img/RubberSoul.jpg" alt="Rubber Soul" class="album-image img-fluid">
                             </div>
@@ -112,7 +112,7 @@
                         </a>
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center album">
-                        <a href="https://en.wikipedia.org/wiki/Please_Please_Me" target="_blank">
+                        <a href="https://en.wikipedia.org/wiki/Revolver_(Beatles_album)" target="_blank">
                             <div>
                                 <img src="assets/img/Revolver.jpg" alt="Revolver" class="album-image img-fluid">
                             </div>
@@ -122,7 +122,7 @@
                         </a>
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center album">
-                        <a href="https://en.wikipedia.org/wiki/Please_Please_Me" target="_blank">
+                        <a href="https://en.wikipedia.org/wiki/Sgt._Pepper%27s_Lonely_Hearts_Club_Band" target="_blank">
                             <div>
                                 <img src="assets/img/SP.jpg" alt="Sgt Pepper’s Lonely Hearts Club Band" class="album-image img-fluid">
                             </div>
@@ -134,7 +134,7 @@
             </div>
             <div class="row">
                 <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center album">
-                            <a href="https://en.wikipedia.org/wiki/Please_Please_Me" target="_blank">
+                            <a href="https://en.wikipedia.org/wiki/The_Beatles_(album)" target="_blank">
                                 <div>
                                     <img src="assets/img/TBWA.png" alt="The Beatles" class="album-image img-fluid">
                                 </div>
@@ -144,7 +144,7 @@
                             </a>
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center album">
-                        <a href="https://en.wikipedia.org/wiki/Please_Please_Me" target="_blank">
+                        <a href="https://en.wikipedia.org/wiki/Yellow_Submarine_(album)" target="_blank">
                             <div>
                                 <img src="assets/img/YS.jpg" alt="Yellow Submarine" class="album-image img-fluid">
                             </div>
@@ -154,7 +154,7 @@
                         </a>
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center album">
-                        <a href="https://en.wikipedia.org/wiki/Please_Please_Me" target="_blank">
+                        <a href="https://en.wikipedia.org/wiki/Abbey_Road" target="_blank">
                             <div>
                                 <img src="assets/img/AbbeyRoad.jpg" alt="Abbey Road" class="album-image img-fluid">
                             </div>
@@ -164,7 +164,7 @@
                         </a>
                 </div>
                 <div class="col-xs-12 col-md-6 col-lg-3 d-flex justify-content-center album">
-                        <a href="https://en.wikipedia.org/wiki/Please_Please_Me" target="_blank">
+                        <a href="https://en.wikipedia.org/wiki/Let_It_Be_(Beatles_album)" target="_blank">
                             <div>
                                 <img src="assets/img/LetItBe.jpg" alt="Let It Be" class="album-image img-fluid">
                             </div>
