Add three videos with iframes into the Media page

--- a/beatles/media.html
+++ b/beatles/media.html
@@ -43,6 +43,22 @@
         </nav>
         
     </header>
+    <section>
+        <div class="container-fluid">
+            <div class="row d-flex justify-content-center lg-vid">
+                <iframe width="700" height="400" src="https://www.youtube.com/embed/S-rB0pHI9fU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <hr>
+            <div class="row d-flex justify-content-center">
+                <div class="col-6 sm-vid  d-flex justify-content-center">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/usNsCeOV4GM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="col-6 sm-vid  d-flex justify-content-center">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/HtUH9z_Oey8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+    </section>
     <footer>
         <ul class="social-networks">
             <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
