--- a/beatles/book-us.html
+++ b/beatles/book-us.html
@@ -45,41 +45,41 @@
     </header>
     <section id="book-us-form">
         <div class="container">
-            <form>
+            <form method="POST">
                 <div class="form-row">
-                    <div class="form-group col-md-6">
+                    <div class="form-group col-md-6 frm-pad">
                     <label for="FirstName">First Name</label>
-                    <input type="email" class="form-control" id="inputEmail5" placeholder="First Name">
+                    <input type="text" class="form-control" id="FirstName" placeholder="First Name">
                     </div>
-                    <div class="form-group col-md-6">
+                    <div class="form-group col-md-6 frm-pad">
                     <label for="LastName">Last Name</label>
-                    <input type="password" class="form-control" id="inputPassword5" placeholder="Last Name">
+                    <input type="text" class="form-control" id="LastName" placeholder="Last Name">
                     </div>
                 </div>
                 <div class="form-row">
-                    <div class="form-group col-md-6">
+                    <div class="form-group col-md-6 frm-pad">
                     <label for="inputEmail4">Email</label>
                     <input type="email" class="form-control" id="inputEmail4" placeholder="Email Address">
                     </div>
-                    <div class="form-group col-md-6">
+                    <div class="form-group col-md-6 frm-pad">
                     <label for="inputPassword4">Phone Number</label>
                     <input type="password" class="form-control" id="inputPassword4" placeholder="Phone Number">
                     </div>
                 </div>
-                <div class="form-group">
+                <div class="form-group frm-pad">
                     <label for="inputAddress">Address</label>
                     <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
                 </div>
-                <div class="form-group">
+                <div class="form-group frm-pad">
                     <label for="inputAddress2">Address 2</label>
                     <input type="text" class="form-control" id="inputAddress2" placeholder="Town">
                 </div>
                 <div class="form-row">
-                    <div class="form-group col-md-6">
+                    <div class="form-group col-md-6 frm-pad">
                     <label for="inputCity">City</label>
                     <input type="text" class="form-control" id="inputCity">
                     </div>
-                    <div class="form-group col-md-6">
+                    <div class="form-group col-md-6 frm-pad">
                     <label for="inputPostCode">Post Code</label>
                     <input type="text" class="form-control" id="inputPostCode">
                     </div>
