--- a/beatles/book-us.html
+++ b/beatles/book-us.html
@@ -45,43 +45,43 @@
     </header>
     <section id="book-us-form">
         <div class="container">
-            <form method="POST">
+            <form>
                 <div class="form-row">
                     <div class="form-group col-md-6 frm-pad">
                     <label for="FirstName">First Name</label>
-                    <input type="text" class="form-control" id="FirstName" placeholder="First Name">
+                    <input type="text" class="form-control" id="FirstName" placeholder="First Name" required>
                     </div>
                     <div class="form-group col-md-6 frm-pad">
                     <label for="LastName">Last Name</label>
-                    <input type="text" class="form-control" id="LastName" placeholder="Last Name">
+                    <input type="text" class="form-control" id="LastName" placeholder="Last Name" required>
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6 frm-pad">
                     <label for="inputEmail4">Email</label>
-                    <input type="email" class="form-control" id="inputEmail4" placeholder="Email Address">
+                    <input type="email" class="form-control" id="inputEmail4" placeholder="Email Address" required>
                     </div>
                     <div class="form-group col-md-6 frm-pad">
-                    <label for="inputPassword4">Phone Number</label>
-                    <input type="password" class="form-control" id="inputPassword4" placeholder="Phone Number">
+                    <label for="phone">Phone Number</label>
+                    <input type="tel" class="form-control" id="phone" placeholder="Phone Number" required>
                     </div>
                 </div>
                 <div class="form-group frm-pad">
                     <label for="inputAddress">Address</label>
-                    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St" required>
                 </div>
                 <div class="form-group frm-pad">
                     <label for="inputAddress2">Address 2</label>
-                    <input type="text" class="form-control" id="inputAddress2" placeholder="Town">
+                    <input type="text" class="form-control" id="inputAddress2" placeholder="Town" required>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6 frm-pad">
                     <label for="inputCity">City</label>
-                    <input type="text" class="form-control" id="inputCity">
+                    <input type="text" class="form-control" id="inputCity" required>
                     </div>
                     <div class="form-group col-md-6 frm-pad">
                     <label for="inputPostCode">Post Code</label>
-                    <input type="text" class="form-control" id="inputPostCode">
+                    <input type="text" class="form-control" id="inputPostCode" required>
                     </div>
                 </div>
                 <div class="d-flex justify-content-center submit-button-rw">
