Add a booking date calendar for user as part of the form

--- a/beatles/book-us.html
+++ b/beatles/book-us.html
@@ -84,6 +84,10 @@
                     <input type="text" class="form-control" id="inputPostCode" required>
                     </div>
                 </div>
+                <div>
+                <label for="booking">Booking:</label>
+                <input type="date" id="booking" name="booking" required>
+                </div>
                 <div class="d-flex justify-content-center submit-button-rw">
                 <button type="submit" class="btn btn-primary submit-button">Submit</button>
                 </div>
