--- a/beatles/home.html
+++ b/beatles/home.html
@@ -62,16 +62,16 @@
             </div>
         </div>
         <div class="container-fluid">
-            <div class="row pjgrrw ">
+            <div class="row pjgrrw">
                 <div class="col-6 col-sm-3 d-flex justify-content-end">
                     <img src="assets/img/Paul1.jpg" alt="Paul McCartney" class="pjgr img-fluid">
                 </div>
-                <div class="col-6 col-sm-3">
+                <div class="col-6 col-sm-3 pjgrcl">
                     <h3>Paul McCartney</h3>
                     <hr>
                     <p>Paul played instruments and did other stuff too for the band when he felt like it. Sometimes he played the bassoon.</p>
                 </div>
-                <div class="col-6 col-sm-3">
+                <div class="col-6 col-sm-3 pjgrcl">
                     <h3>John Lennon</h3>
                     <hr>
                     <p>John could play the piano with one hand while he used the other to make cement. He was also a big advocate of Artex.</p>
@@ -84,12 +84,12 @@
                 <div class="col-6 col-sm-3 d-flex justify-content-end">
                     <img src="assets/img/George3.jpg" alt="George Harrison" class="pjgr img-fluid">
                 </div>
-                <div class="col-6 col-sm-3">
+                <div class="col-6 col-sm-3 pjgrcl">
                     <h3>George Harrison</h3>
                     <hr>
                     <p>George smoked so many cigarettes that he was known as The Big Fag. George insisted that this was the only reason why.</p>
                 </div>
-                <div class="col-6 col-sm-3">
+                <div class="col-6 col-sm-3 pjgrcl">
                     <h3>Ringo Starr</h3>
                     <hr>
                     <p>When Ringo joined the band in 1961, he could barely speak a word of English. Despite many attempts by the band to teach him the language, it was found that the only way he could communicate was through the medium of banging drums. </p>
