--- a/beatles/media.html
+++ b/beatles/media.html
@@ -46,23 +46,23 @@
     <section>
         <div class="container-fluid">
             <div class="row d-flex justify-content-center lg-vid">
-                <iframe width="784" height="441" src="https://www.youtube.com/embed/HtUH9z_Oey8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="lgsize" src="https://www.youtube.com/embed/HtUH9z_Oey8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <hr>
             <div class="row">
                 <div class="col-lg-6 sm-vid  d-flex justify-content-center">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/usNsCeOV4GM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="smsize" src="https://www.youtube.com/embed/usNsCeOV4GM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="col-lg-6 sm-vid  d-flex justify-content-center">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/UelDrZ1aFeY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="smsize" src="https://www.youtube.com/embed/UelDrZ1aFeY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-6 sm-vid  d-flex justify-content-center">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/2Q_ZzBGPdqE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="smsize" src="https://www.youtube.com/embed/2Q_ZzBGPdqE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
                 <div class="col-lg-6 sm-vid  d-flex justify-content-center">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/yYvkICbTZIQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="smsize" src="https://www.youtube.com/embed/yYvkICbTZIQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
