--- a/beatles/book-us.html
+++ b/beatles/book-us.html
@@ -27,7 +27,7 @@
 	        <div class="collapse navbar-collapse" id="navbarNavDropdown">
 		        <ul class="navbar-nav ml-auto uppercase">
 			        <li class="nav-item">
-				        <a class="nav-link" href="home.html">Home<span class="sr-only">(current)</span></a>
+				        <a class="nav-link" href="home.html">Home</a>
 			        </li>
 			        <li class="nav-item">
 				        <a class="nav-link" href="discography.html">Discography</a>
@@ -36,7 +36,7 @@
 				        <a class="nav-link" href="media.html">Media</a>
 			        </li>
                     <li class="nav-item">
-				        <a class="nav-link" href="book-us.html">Book Us</a>
+				        <a class="nav-link" href="book-us.html">Book Us<span class="sr-only">(current)</span></a>
 			        </li>
 		        </ul>
 	        </div>
