--- a/beatles/discography.html
+++ b/beatles/discography.html
@@ -27,10 +27,10 @@
 	        <div class="collapse navbar-collapse" id="navbarNavDropdown">
 		        <ul class="navbar-nav ml-auto uppercase">
 			        <li class="nav-item">
-				        <a class="nav-link" href="home.html">Home<span class="sr-only">(current)</span></a>
+				        <a class="nav-link" href="home.html">Home</a>
 			        </li>
 			        <li class="nav-item">
-				        <a class="nav-link" href="discography.html">Discography</a>
+				        <a class="nav-link" href="discography.html">Discography<span class="sr-only">(current)</span></a>
 			        </li>
                     <li class="nav-item">
 				        <a class="nav-link" href="media.html">Media</a>
