--- a/beatles/media.html
+++ b/beatles/media.html
@@ -27,13 +27,13 @@
 	        <div class="collapse navbar-collapse" id="navbarNavDropdown">
 		        <ul class="navbar-nav ml-auto uppercase">
 			        <li class="nav-item">
-				        <a class="nav-link" href="home.html">Home<span class="sr-only">(current)</span></a>
+				        <a class="nav-link" href="home.html">Home</a>
 			        </li>
 			        <li class="nav-item">
 				        <a class="nav-link" href="discography.html">Discography</a>
 			        </li>
                     <li class="nav-item">
-				        <a class="nav-link" href="media.html">Media</a>
+				        <a class="nav-link" href="media.html">Media<span class="sr-only">(current)</span></a>
 			        </li>
                     <li class="nav-item">
 				        <a class="nav-link" href="book-us.html">Book Us</a>
