Add in information about each band member

--- a/beatles/home.html
+++ b/beatles/home.html
@@ -69,12 +69,12 @@
                 <div class="col-6 col-sm-3 pjgrcl">
                     <h3>Paul McCartney</h3>
                     <hr>
-                    <p>Paul played instruments and did other stuff too for the band when he felt like it. Sometimes he played the bassoon.</p>
+                    <p>Singer songwriter Paul plays the bass guitar in the band.  He has written some of their most successful hits such as Yesterday and Penny Lane.</p>
                 </div>
                 <div class="col-6 col-sm-3 pjgrcl">
                     <h3>John Lennon</h3>
                     <hr>
-                    <p>John could play the piano with one hand while he used the other to make cement. He was also a big advocate of Artex.</p>
+                    <p>John and Paul formed a band after meeting at a church fete in their home city of Liverpool. John plays guitar, keyboards and sings lead vocals. He is also a prolific and highly regarded songwriter.</p>
                 </div>
                 <div class="col-6 col-sm-3 d-flex justify-content-start">
                     <img src="assets/img/John1.jpg" alt="John Lennon" class="pjgr img-fluid">
@@ -87,12 +87,12 @@
                 <div class="col-6 col-sm-3 pjgrcl">
                     <h3>George Harrison</h3>
                     <hr>
-                    <p>George smoked so many cigarettes that he was known as The Big Fag. George insisted that this was the only reason why.</p>
+                    <p>Lead guitarist George, joined the band in 1958. He likes to stretch the band creatively with the inclusion of Indian instrumentation. His songs include Tax Man and Here Comes The Sun.</p>
                 </div>
                 <div class="col-6 col-sm-3 pjgrcl">
                     <h3>Ringo Starr</h3>
                     <hr>
-                    <p>When Ringo joined the band in 1961, he could barely speak a word of English. Despite many attempts by the band to teach him the language, it was found that the only way he could communicate was through the medium of banging drums. </p>
+                    <p>Ringo is the drummer with the band, but occasionally sings lead vocals on such songs as With a Little Help From My Friends and the number one hit Yellow Submarine. </p>
                 </div>
                 <div class="col-6 col-sm-3 d-flex justify-content-start">
                     <img src="assets/img/Ringo3.jpg" alt="Ringo Starr" class="pjgr img-fluid">
