--- a/beatles/book-us.html
+++ b/beatles/book-us.html
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="navbar">
 
-	        <a class="navbar-brand" href="home.html">
+	        <a class="navbar-brand" href="index.html">
 		        <img class="img-fluid" src="assets/img/Beatles1.jpg" alt="Logo" title="Logo" style="height: 6rem;"/>
 	        </a>
 ​
@@ -27,7 +27,7 @@
 	        <div class="collapse navbar-collapse" id="navbarNavDropdown">
 		        <ul class="navbar-nav ml-auto uppercase">
 			        <li class="nav-item">
-				        <a class="nav-link" href="home.html">Home</a>
+				        <a class="nav-link" href="index.html">Home</a>
 			        </li>
 			        <li class="nav-item">
 				        <a class="nav-link" href="discography.html">Discography</a>
